---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: ????
  Bugfixes:
    - Fixed incorrect addition of filters of filterable inventories
  Internal:
    - Simplify and consolidate item and quality canonization
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2024-10-30
  Changes:
    - Support for spoilage results
  Bugfixes:
    - Fixed crash with non-item logistic requests
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2024-10-22
  Bugfixes:
    - Handle case of filter with quality and no item
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-10-21
  Changes:
    - Logistic chest updaters now work with the top logistic group if exists
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2024-10-18
  Bugfixes:
    - Fixed handling signals without quality
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2024-10-18
  Bugfixes:
    - Fixed migration from old versions
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-10-14
  Changes:
    - Updated for Factorio version 2.0
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 2023-12-20
  Changes:
    - Updated readme
    - Items are refreshed periodically, opening gui when needed
  Bugfixes:
    - Fixed active items changing order of filters
    - Handling players who are removed
    - Fixed items changing order on update
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2023-12-11